tdf#82065 strict docx import: add support for LN_CT_Ind_start

Change-Id: Iaddd9e852388f5bb076c4bc6f8eee8a256581033
Reviewed-on: https://gerrit.libreoffice.org/43985
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>